# openMediaKeeper

./: .gitignore  Dockerfile  README.md  pyproject.toml
docs/: DEVELOPMENT.md
openmediakeeper/: __init__.py  api.py  cli.py  config.py  logging_utils.py  models.py  organizer.py  parsers.py  providers.py  watcher.py
tests/: test_parsers.py
