[project]
name = "openmediakeeper"
version = "0.1.0"
description = "Automated media organizer (movies & TV) with CLI and API-ready backend."
#readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nico" }]
dependencies = [
    "typer>=0.12.3,<1.0.0",
    "watchdog>=4.0.0,<5.0.0",
    "requests>=2.32.0,<3.0.0",
    "pydantic>=2.7.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.13.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.scripts]
omk = "openmediakeeper.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

